--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,7 +22,11 @@
       <% for(post of posts) { %>
       <li>
         <p>
-          <%= post.content%>
+          <% if(locals.user && locals.user.id == post.user.id) { %>
+          <small>
+            <a href="/posts/destroy/<%= post.id%>">X</a>
+          </small>
+          <% } %> <%= post.content%>
           <br />
           <small>
             <%= post.user.name %>
@@ -48,7 +52,11 @@
               <% for(comment of post.comments){%>
 
               <p>
-                <%= comment.content %>
+                <% if(locals.user && locals.user.id == comment.user.id) { %>
+                <small>
+                  <a href="/comments/destroy/<%= comment.id%>">X</a>
+                </small>
+                <% } %> <%= comment.content %>
                 <br />
                 <small>
                   <%=comment.user.name %>
