--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -2,12 +2,14 @@
   <% if( locals.user) {%>
   <div id="header-block">
     <div>
-      <h1>Codeial</h1>
+      <h1 id="heading"><a href="/"> Codeial </a></h1>
     </div>
 
     <div id="profile-container">
       <div>
-        <a href="/users/profile"> <h2><%=user.name%> &nbsp;</h2></a>
+        <a href="/users/profile/:<%= locals.user.id%>">
+          <h2><%=user.name%> &nbsp;</h2></a
+        >
       </div>
       <div>
         <a href="/users/sign-out"> <h2>Sign Out</h2> </a>
