--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,74 +1,39 @@
-<h1>Codeial EJS <%= title%></h1>
+<link rel="stylesheet" href="/css/home.css" />
 
-<section id="feed-posts">
-  <h4>Posts</h4>
+<div id="home-container">
+  <section id="feed-posts">
+    <h2>Posts</h2>
 
-  <% if(locals.user){ %>
-  <form action="/posts/create" id="new-post-form" method="POST">
-    <textarea
-      name="content"
-      cols="30"
-      rows="3"
-      placeholder="Type Here...."
-      required
-    ></textarea>
-    <input type="submit" value="Post" />
-  </form>
+    <% if(locals.user){ %>
+    <form action="/posts/create" id="new-post-form" method="POST">
+      <textarea
+        name="content"
+        cols="30"
+        rows="3"
+        placeholder="Type Here...."
+        required
+      ></textarea>
+      <input type="submit" value="Post" />
+    </form>
 
-  <% } %>
+    <% } %>
 
-  <div id="post-list-container">
+    <div id="post-list-container">
+      <ul>
+        <% for(post of posts) { %> <%- include('_post') -%> <% } %>
+      </ul>
+    </div>
+  </section>
+
+  <section id="user-friends">
     <ul>
-      <% for(post of posts) { %>
-      <li>
-        <p>
-          <% if(locals.user && locals.user.id == post.user.id) { %>
-          <small>
-            <a href="/posts/destroy/<%= post.id%>">X</a>
-          </small>
-          <% } %> <%= post.content%>
-          <br />
-          <small>
-            <%= post.user.name %>
-          </small>
-        </p>
-        <div class="post-comments">
-          <% if(locals.user){%>
+      <h2>Friends</h2>
+      <% for(u of all_users) {%>
+      <p>
+        <a href="/users/profile/<%= u.id%>"> <%= u.name%> </a>
+      </p>
 
-          <form action="/comments/create" method="POST">
-            <input
-              type="text"
-              name="content"
-              placeholder="Type here to add comment..."
-              required
-            />
-            <input type="hidden" name="post" value="<%=post._id %>" />
-            <input type="submit" value="Add Comment" />
-          </form>
-          <%}%>
-
-          <div class="post-comments-list">
-            <ul id="post=comments-<%= post._id%>">
-              <% for(comment of post.comments){%>
-
-              <p>
-                <% if(locals.user && locals.user.id == comment.user.id) { %>
-                <small>
-                  <a href="/comments/destroy/<%= comment.id%>">X</a>
-                </small>
-                <% } %> <%= comment.content %>
-                <br />
-                <small>
-                  <%=comment.user.name %>
-                </small>
-              </p>
-              <% } %>
-            </ul>
-          </div>
-        </div>
-      </li>
-
-      <% } %>
+      <%}%>
     </ul>
-  </div>
-</section>
+  </section>
+</div>
