Connect-flash|Noty js added

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,12 @@
     <title>
       <%= title %>
     </title>
+    <!-- adding cdn for noty js for flash messages -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
     <link rel="stylesheet" href="/css/layout.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/footer.css" />
@@ -18,5 +24,27 @@
       <%- body %>
     </main>
     <%- include('_footer'); %> <%- script %>
+
+    <script>
+      <% if(flash.success && flash.success.length>0) {%>
+          new Noty({
+            theme:'relax',
+            text: "<%=flash.success %>",
+            type:'success',
+            layOut:'topRight',
+            timeout: 1500
+          }).show();
+        <% } %>
+
+        <% if(flash.error && flash.error.length>0){%>
+          new Noty({
+            theme:'relax',
+            text: "<%=flash.error %>",
+            type:'error',
+            layOut:'topRight',
+            timeout: 1500
+          }).show();
+        <% } %>
+    </script>
   </body>
 </html>
