added AJAX to add post/comments dynamically

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -7,7 +7,7 @@
 
     <div id="profile-container">
       <div>
-        <a href="/users/profile/:<%= locals.user.id%>">
+        <a href="/users/profile/<%= locals.user.id%>">
           <h2><%=user.name%> &nbsp;</h2></a
         >
       </div>
