--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -8,7 +8,7 @@
 
     <div id="footer-links">
       <a href="/"> Home </a>
-      <a href="/users/profile"> Profile </a>
+      <a href="/users/profile/<%=locals.user%>"> Profile </a>
     </div>
   </div>
 </footer>
