Upload file(display picture) using multer

--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,10 +1,13 @@
 <link rel="stylesheet" href="/css/user_profile.css" />
 
-<h1><%=profile_user.name %></h1>
-
-<% if(locals.user.id==profile_user.id) {%>
+<img src="<%=user.avatar%>" alt="<%=user.name%>" width="100"<%
+if(locals.user.id==profile_user.id) {%>
 <!-- If user matches, only show the form  -->
-<form action="/users/update/<%=profile_user.id %>" method="POST">
+<form
+  action="/users/update/<%=profile_user.id %>"
+  enctype="multipart/form-data"
+  method="POST"
+>
   <input
     type="text"
     name="name"
@@ -19,6 +22,7 @@
     placeholder="Update Email....."
     required
   />
+  <input type="file" name="avatar" placeholder="Profile Picture" />
   <input type="submit" value="Update" name="Update" />
 </form>
 
