--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -5,6 +5,8 @@
   <input type="submit" value="Sign In" />
 </form>
 
+<a href="/reset-password">Forgot Password</a>
+
 <p>
   <a href="/users/auth/google">Google Sign In/Sign Up</a>
 </p>
